# fluidsim

./: Cargo.toml  README.md
src/: fluid.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  timer.rs
