[package]
name = "fluidsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
eyre = "0.6.8"
futures = { version = "0.3.28", features = ["executor"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
ndarray = "0.15.6"
wgpu = "0.16.0"
winit = "0.28.3"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
